Finished the baseline initialization function. Now intitialize creates an index on the mongodb. Created a context managing class for mongodb

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,13 @@ typings/
 .env
 
 **.json
+
+#python virtual envs
+venv
+
+#suggested Data file
+data
+
+#python compiled files
+*.pyc
+scratch.py
