--- a/d2/server/package.json
+++ b/d2/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.9.2",
     "bootstrap": "^4.1.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.15",
