--- a/d2/server/package.json
+++ b/d2/server/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "dependencies": {
     "antd": "^3.9.2",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.1.3",
+    "css-loader": "^1.0.0",
     "express": "^4.16.3",
+    "file-loader": "^2.0.0",
     "mongoose": "^5.2.15",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node app.js",
+    "build": "webpack --config webpack.config.js"
   }
 }
