--- a/d2/server/package.json
+++ b/d2/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "mongoose": "^5.2.15",
+    "only-if-changed-webpack-plugin": "0.0.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
