--- a/d2/src/package.json
+++ b/d2/src/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
+    "@material-ui/core": "^3.1.1",
     "antd": "^3.9.2",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
@@ -26,6 +27,7 @@
     "react-fontawesome": "^1.6.1",
     "react-icons": "^3.1.0",
     "react-scripts": "1.1.5",
+    "react-stars": "^2.2.5",
     "slick-carousel": "^1.8.1",
     "webpack-cli": "^3.1.0"
   },
